# pump

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  PUMP_ARCHITECTURE.md  PUMP_SPEC.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
app/: next.config.mjs  package.json  vercel.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: Game.tsx  confirm-real-modal.tsx  sound.ts  wallet-bar.tsx  wallet-providers.tsx
app/components/terminal/: LeaderboardPanel.tsx  MarketHeader.tsx  PositionsPanel.tsx  PriceChart.tsx  RidePrompt.tsx  RideTransition.tsx  Terminal.tsx  TradePanel.tsx  sketch.tsx
app/lib/: backend.ts  flash-real.ts  leaderboard.ts  position.ts  price-feed.ts
db/: .gitkeep
programs/pump/: .gitkeep  Cargo.toml
programs/pump/src/: lib.rs
scripts/: er-play-bot.ts  er-read.ts  er-smoke.ts  loop-smoke.ts  session-verify.ts
services/game-server/: package.json
services/game-server/idl/: pump.json
services/game-server/src/: index.ts  onchain.ts  run.ts
services/price-relay/: package.json
services/price-relay/src/: index.ts  relay.ts
