[package]
name = "pump"
version = "0.1.0"
description = "PUMP — RunSession + settlement (Solana Blitz v5)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

# Versions pinned to match ../magicblock-engine-examples/anchor-counter exactly
# (its programs/public-counter/Cargo.toml is the source of truth for the ER wiring).
[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
# Pinned with `=` so we resolve to exactly 0.14.3 — the version the example's
# Cargo.lock actually built (a bare "0.14.3" caret would float up to 0.14.4).
ephemeral-rollups-sdk = { version = "=0.14.3", features = ["anchor"] }
# Session keys (gum) — per-player attribution. Version + features copied verbatim
# from ../magicblock-engine-examples/session-keys/programs/anchor-counter-session.
session-keys = { version = "=3.1.1", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
